# sorban-block-explorer

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
crates/api/: Cargo.toml
crates/api/src/: cache.rs  lib.rs  main.rs  state.rs  tests_integration.rs
crates/api/src/accounts/: dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/assets/: dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/common/: crud.rs  cursor.rs  errors.rs  extractors.rs  filters.rs  mod.rs  pagination.rs  path.rs  strkey.rs
crates/api/src/contracts/: cache.rs  cursor.rs  dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/ledgers/: dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/liquidity_pools/: dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/network/: cache.rs  dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/nfts/: dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/openapi/: mod.rs  schemas.rs
crates/api/src/ops/: mod.rs
crates/api/src/runtime_enrichment/: mod.rs
crates/api/src/search/: classifier.rs  dto.rs  handlers.rs  mod.rs  queries.rs
crates/api/src/stellar_archive/: dto.rs  extractors.rs  merge.rs  mod.rs
crates/api/src/transactions/: cursor.rs  dto.rs  handlers.rs  mod.rs  queries.rs
crates/audit-harness/: Cargo.toml  README.md  run-invariants.sh
crates/audit-harness/reports/: 2026-04-28-phase1-30k.md  2026-04-28-phase2a-30k.md  2026-04-28-phase2c-30k.md  2026-04-30-phase1-1k-spot-post-fixes.md  2026-04-30-phase1-30k-post-fixes.md  2026-04-30-phase2-30k-diff-suite.md  2026-04-30-phase2a-1k-spot-accounts.md  2026-04-30-phase2a-1k-spot-transactions.md  2026-04-30-phase2c-1k-spot-lp-pool-id.md  2026-04-30-phase2c-30k-lp-pool-id.md  README.md
crates/audit-harness/reports/manual-2026-04-28/: 02.md  03.md  04.md  05.md
crates/audit-harness/reports/manual-2026-04-30/: 00-plan.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  _template.md
crates/audit-harness/sql/: 01_ledgers.sql  02_transactions.sql  03_transaction_hash_index.sql  04_operations_appearances.sql  05_transaction_participants.sql  06_soroban_contracts.sql  07_wasm_interface_metadata.sql  08_soroban_events_appearances.sql  09_soroban_invocations_appearances.sql  10_assets.sql  11_accounts.sql  12_account_balances_current.sql  13_nfts.sql  14_nft_ownership.sql  15_liquidity_pools.sql  16_liquidity_pool_snapshots.sql  17_lp_positions.sql  18_partition_routing.sql
crates/backfill-runner/: Cargo.toml  README.md
crates/backfill-runner/src/: dashboard.rs  error.rs  ingest.rs  main.rs  partition.rs  resume.rs  run.rs  source.rs  status.rs  sync.rs
crates/db/: Cargo.toml  MIGRATIONS.md
crates/db-merge/: Cargo.toml  README.md
crates/db-merge/src/: backup.rs  batcher.rs  cli.rs  error.rs  fdw.rs  ingest.rs  main.rs  preflight.rs  snapshot_source.rs
crates/db-merge/src/diff/: account_balances_current.rs  accounts.rs  assets.rs  ledgers.rs  liquidity_pool_snapshots.rs  liquidity_pools.rs  lp_positions.rs  mod.rs  nft_ownership.rs  nfts.rs  operations_appearances.rs  soroban_contracts.rs  soroban_events_appearances.rs  soroban_invocations_appearances.rs  transaction_hash_index.rs  transaction_participants.rs  transactions.rs  wasm_interface_metadata.rs
crates/db-merge/src/finalize/: mod.rs  nfts_current_owner.rs  sequences.rs
crates/db-merge/src/steps/: account_balances_current.rs  accounts.rs  assets.rs  ledgers.rs  liquidity_pool_snapshots.rs  liquidity_pools.rs  lp_positions.rs  mod.rs  nft_ownership.rs  nfts.rs  operations_appearances.rs  soroban_contracts.rs  soroban_events_appearances.rs  soroban_invocations_appearances.rs  transaction_hash_index.rs  transaction_participants.rs  (+2 more)
crates/db-partition-mgmt/: Cargo.toml
crates/db-partition-mgmt/src/: lib.rs  main.rs
crates/db/migrations/: 0001_extensions.sql  0002_identity_and_ledgers.sql  0003_create_soroban_contracts.sql  0003_transactions_and_operations.sql  0004_create_soroban_activity_tables.sql  0004_soroban_activity.sql  0005_create_accounts_tokens.sql  0005_tokens_nfts.sql  0006_create_nfts_pools_snapshots.sql  0006_liquidity_pools.sql  0007_account_balances.sql  0008_enum_label_functions.sql  0010_drop_transaction_xdr_columns.sql  0011_drop_event_payload_columns.sql  0012_drop_operation_details_column.sql  0013_drop_heavy_jsonb_columns.sql  0014_drop_soroban_events_table.sql  20260421000000_transactions_hash_unique.down.sql  20260421000000_transactions_hash_unique.up.sql  20260421000100_replay_safe_uniques.down.sql  20260421000100_replay_safe_uniques.up.sql  20260422000000_enum_label_functions.down.sql  20260422000000_enum_label_functions.up.sql  20260422000100_contract_type_add_nft_fungible.down.sql  20260422000100_contract_type_add_nft_fungible.up.sql  20260424000000_drop_assets_sep1_detail_cols.down.sql  20260424000000_drop_assets_sep1_detail_cols.up.sql  20260424000000_sac_identity_native_allowance.down.sql  20260427000000_sac_identity_native_allowance.up.sql  20260428000000_seed_native_asset_singleton.down.sql  20260428000000_seed_native_asset_singleton.up.sql  20260428000100_add_endpoint_query_indexes.down.sql  20260428000100_add_endpoint_query_indexes.up.sql  20260430000000_invocations_caller_contract.down.sql  20260430000000_invocations_caller_contract.up.sql  20260505130000_soroban_contracts_typed_name_column.down.sql  20260505130000_soroban_contracts_typed_name_column.up.sql
crates/db/src/: lib.rs  persistence.rs  pool.rs  soroban.rs
crates/domain/: Cargo.toml
crates/domain/src/: account.rs  asset.rs  balance.rs  ledger.rs  lib.rs  nft.rs  operation.rs  pool.rs  soroban.rs  token.rs  transaction.rs
crates/enrichment-shared/: Cargo.toml
crates/enrichment-shared/src/: lib.rs
crates/enrichment-worker/: Cargo.toml
crates/enrichment-worker/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs
crates/indexer/tests/: persist_integration.rs
(+716 files in other folders)
