[package]
name = "db"
version = "0.1.0"
edition = "2024"
description = "Database access layer for the Soroban block explorer"

[dependencies]
domain = { path = "../domain" }
xdr-parser = { path = "../xdr-parser" }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
