[package]
name = "enrichment-worker"
version = "0.1.0"
edition = "2024"
description = "Type-1 enrichment worker Lambda — consumes SQS messages emitted by the indexer (Galaxy) Lambda and runs per-kind HTTP fetches that write the enriched columns (icon_url today; LP analytics later) back to Postgres."

[[bin]]
name = "enrichment-worker"
path = "src/main.rs"

[dependencies]
enrichment-shared = { path = "../enrichment-shared" }
db = { path = "../db", features = ["aws-secrets"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = { version = "0.16", default-features = false, features = ["sqs"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
