[package]
name = "indexer"
version = "0.1.0"
edition = "2024"
description = "Ledger Processor Lambda for the Soroban block explorer"

[lib]
name = "indexer"
path = "src/lib.rs"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
xdr-parser = { path = "../xdr-parser" }
domain = { path = "../domain", features = ["sqlx"] }
db = { path = "../db", features = ["aws-secrets"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-cloudwatch = "1"
aws-sdk-s3 = "1"
aws-sdk-sqs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
stellar-xdr = { workspace = true }
hex = { workspace = true }
percent-encoding = "2"
